--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "ext-bcmath": "*",
         "encore/laravel-admin": "^1.7",
         "endroid/qr-code": "^3.7",
         "fideloper/proxy": "^4.0",
         "jxlwqq/quill": "^1.0",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
+        "moontoast/math": "^1.2",
         "overtrue/laravel-lang": "^3.0",
         "yansongda/pay": "^2.9"
     },
