--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2",
         "ext-bcmath": "*",
+        "elasticsearch/elasticsearch": "^7.6",
         "encore/laravel-admin": "^1.7",
         "endroid/qr-code": "^3.7",
         "fideloper/proxy": "^4.0",
